--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+<md-toolbar color="primary">
+  Hello World
+</md-toolbar>
+
+<div class="app_content">
+  <fc-funnel [funnel]="funnel"></fc-funnel>
+  <fc-funnel-editor [funnel]="funnel"></fc-funnel-editor>
+</div>
