--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<md-toolbar color="primary">
-  Hello World
+<md-toolbar color="primary" class="md-elevation-z4">
+  Online Funnel Chart
 </md-toolbar>
 
 <div class="app_content">
