--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,10 @@
-@import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
+@import '~@angular/material/core/theming/all-theme';
+@include md-core(); // Include non-theme styles for core.
+$primary: md-palette($md-grey);
+$accent:  md-palette($md-amber, A200, A100, A400);
+$theme: md-light-theme($primary, $accent);
+@include angular-material-theme($theme); // Include all theme styles for the components.
+
 @import '~dragula/dist/dragula.css';
 
 html,
