--- a/src/app/funnel/funnel-editor-step/funnel-editor-step.component.scss
+++ b/src/app/funnel/funnel-editor-step/funnel-editor-step.component.scss
@@ -3,3 +3,19 @@
 .funnel-editor-step_error {
   color: md-color($md-red, 500, 1);
 }
+
+.funnel-editor-step_toolbar {
+  display: flex;
+}
+
+.funnel-editor-step_toolbar-group {
+  & + & {
+    border-left: 1px solid md-color($md-grey, 500, .2);
+    padding-left: 5px;
+    margin-left: 5px;
+  }
+}
+
+.funnel-editor-step_spacer {
+  flex: 1 1;
+}
