--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,64 @@ body {
 * {
   font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
 }
+
+.splash-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+
+  h2 {
+    margin: 20px 0 0;
+    font-weight: normal;
+  }
+}
+
+.splash-screen_spinner {
+  height: 80px;
+  text-align: center;
+
+  > div {
+    background-color: #333;
+    height: 100%;
+    width: 12px;
+    display: inline-block;
+
+    animation: sk-stretchdelay 1.2s infinite ease-in-out;
+  }
+
+  .rect2 {
+    animation-delay: -1.1s;
+  }
+
+  .rect3 {
+    animation-delay: -1.0s;
+  }
+
+  .rect4 {
+    animation-delay: -0.9s;
+  }
+
+  .rect5 {
+    animation-delay: -0.8s;
+  }
+}
+
+@-webkit-keyframes sk-stretchdelay {
+  0%, 40%, 100% {
+    transform: scaleY(0.4)
+  }
+  20% {
+    transform: scaleY(1.0)
+  }
+}
+
+@keyframes sk-stretchdelay {
+  0%, 40%, 100% {
+    transform: scaleY(0.4);
+  }
+  20% {
+    transform: scaleY(1.0);
+  }
+}
